--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,17 +25,18 @@ apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
 
     lintOptions {
         disable 'InvalidPackage'
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.eggnstone.flutter_base"
+        applicationId "dev.eggnstone.flutter_base"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 30
+        multiDexEnabled true
+
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -52,3 +53,6 @@ android {
 flutter {
     source '../..'
 }
+
+apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
