--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,9 +8,17 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.3.0'
-        classpath 'io.fabric.tools:gradle:1.26.1'
+        // Update gradle-wrapper.properties according to
+        // https://developer.android.com/studio/releases/gradle-plugin#updating-gradle
+        classpath 'com.android.tools.build:gradle:3.6.4'
+
+        // Firebase: https://firebase.google.com/docs/android/setup
+        // Google Services Gradle Plugin: https://developers.google.com/android/guides/google-services-plugin
+        classpath 'com.google.gms:google-services:4.3.3'
+
+        // Firebase-Crashlytics
+        // https://pub.dev/packages/firebase_crashlytics
+        classpath 'io.fabric.tools:gradle:1.31.2'
     }
 }
 
